--- a/environment.yaml
+++ b/environment.yaml
@@ -7,7 +7,7 @@ dependencies:
   - python=3.9
   - snakemake-minimal =7.0.1
   - samtools >=1.3
-  - clustalw =2.1
+  - clustalo >=1.2.4
   - phyml =3.3.20200621
   - r-base =4.0.2
   - biopython=1.79
